--- a/src/app/courses/courses-list/courses-list.component.scss
+++ b/src/app/courses/courses-list/courses-list.component.scss
@@ -87,13 +87,13 @@
     border-radius: 30px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
     white-space: nowrap;
-    
-        background-color: var(--color-white) ;     border: 2px solid var(--color-blue);     color: var(--color-blue) ;     
+    background-color:var(--color-white); 
+    border: 2px solid var(--color-blue);     color: var(--color-blue) ;     
     .mdc-button__label {
-        color: var(--color-blue);
+        color:var(--color-blue);
     }
-    --mat-mdc-button-label-text-color: var(--color-blue) ;
-    --mat-mdc-button-icon-color: var(--color-blue)  
+    --mat-mdc-button-label-text-color:var(--color-blue) ;
+    --mat-mdc-button-icon-color:var(--color-blue)  
     &:hover {
         background-color: rgba(0, 69, 184, 0.05) ;         box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);     }
 
